--- a/weathersite/sensordata/templates/index.html
+++ b/weathersite/sensordata/templates/index.html
@@ -1,34 +1,41 @@
-{% extends "base_generic.html"%}
+{% extends "base_generic.html" %}
 {% block content %}
-
-<h1> My Weather Sensors Home </h1>
-<p> Welcome to my Sensors Data by <em> Pau Amargant </em> </p>
-<h2> App Statistics </h2>
-<p> The current counts are:: </p>
-<ul>
-    <li> <strong> Sensors: </strong> {{num_sensors}}</li>
-    <li> <strong> Measurements: </strong> {{num_measurements}}</li>
-    <li> <strong> Measures: </strong> {{num_measures}} </li>
-</ul>
-
-<h2> Sensors </h2>
-<ul>
-{% for s in sensors %}
- <li>{{s.id}} - {{s.room}}
-{% endfor %}
- </ul>
-
- <h2> Measurements </h2>
-<ul>
-{% for s in sensors %}
-<li> Sensor {{s.id}}:
-     {% for m in s.measurement_set.all %}
-     <ul>
-        <li>{{m}}</li>
-     </ul>
-    {% endfor %}
-{% endfor %}
- </ul>
-{% load static %}
-<img src="{% static 'images/esp32.jpg' %}" alt="ESP32 setup" style="width:400px;" /
-{% endblock %}
+    <h1>My Weather Sensors Home</h1>
+    <p>
+        Welcome to my Sensors Data by <em>Pau Amargant</em>
+    </p>
+    <h2>App Statistics</h2>
+    <p>The current counts are::</p>
+    <ul>
+        <li>
+            <strong>Sensors:</strong> {{ num_sensors }}
+        </li>
+        <li>
+            <strong>Measurements:</strong> {{ num_measurements }}
+        </li>
+        <li>
+            <strong>Measures:</strong> {{ num_measures }}
+        </li>
+    </ul>
+    <h2>Sensors</h2>
+    <ul>
+        {% for s in sensors %}
+            <li>
+                <a href="/data/sensor/{{ s.id }}">{{ s.id }} - {{ s.room }}</a>
+            {% endfor %}
+        </ul>
+        <h2>Measurements</h2>
+        <ul>
+            {% for s in sensors %}
+                <li>
+                    Sensor {{ s.id }}:
+                    {% for m in s.measurement_set.all %}
+                        <ul>
+                            <li>{{m}}</li>
+                        </ul>
+                    {% endfor %}
+                {% endfor %}
+            </ul>
+            {% load static %}
+            <img src="{% static 'images/esp32.jpg' %}" alt="ESP32 setup" style="width:400px;" /
+            {% endblock %}
